src/objects/CS_BoxTokens__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>stores tokens for box</description>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Email_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Box Tokens</label>
</CustomObject>